--- a/resume.html
+++ b/resume.html
@@ -29,9 +29,9 @@
     font-size: 160px;
   }
   h2 {
-    color: #556B2F;
+    color: #9ACD32;
     font-family: "industry-inc-base",sans-serif;
-    font-size: 50px;
+    font-size: 60px;
   }
   
   
@@ -209,9 +209,8 @@ header {
 
 <h2> Experiece</h2>
 
-<p style="float: left; text-align: justify; font-size: 25px; color: #556B2F; margin-right: 20px;">  Jane and John met 9 years ago while attending college.  During a volunteering assignment to help the local animal shelter, thye both
-  met and thorugh their love of animals they became inseparable from that day forward.  Now they have decided to spend the rest of their lives together and they want to celebrate this 
-  occassion surrouynded by their loved ones.</p>
+<p style="float: left; text-align: justify; font-size: 25px; color: #9ACD32; margin-right: 20px;">  I want to offer my services and expertise to the world.  I have a passion for creating and promoting ideas and making greatness even greater.  I can help you promote from the ground up your business by building you a website that can help you achieve your goals.  
+	From digital illustration to image manipulation, I am sure I can help you achieve the success you need to achieve your goals.</p>
 
 
 </section>
