--- a/resume.html
+++ b/resume.html
@@ -216,7 +216,7 @@ header {
 <h2>Portfolio</h2>
   <h3 href="#">Digital Illustration</h3>
 
-<a> <img id="gifts" src="GWDA273/action final project.pdf" style="width: 250px; height: 250px;"> </a>
+<a> <img id="gifts" src="http://nandoe0351.me/GWDA273/action%20final%20project.jpg" style="width: 250px; height: 250px;"> </a>
   <br>
   
   <h3 href="#">Image Manipulation</h3>
