--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@ header {
   #Designer {
 	  font-family: "ocr-a-std",sans-serif;
  
-    color: #9ACD32; 
+    color: #FFFF00; 
     font-size: 100px;
 	 
   }
