--- a/resume.html
+++ b/resume.html
@@ -33,6 +33,16 @@
     font-family: "industry-inc-base",sans-serif;
     font-size: 60px;
   }
+	  
+  h3 {
+	   -webkit-transition: width 2s, height 4s;
+    transition: width 2s, height 4s;
+}
+
+h3:hover {
+    width: 300px;
+    height: 300px;
+}
   
   
   
@@ -147,19 +157,7 @@ header {
 		filter: saturate(0);
 	}
 	
-	.transition {
-		width: 100px;
-    height: 100px;
-    
-    -webkit-transition: width 2s, height 4s;
-    transition: width 2s, height 4s;
-}
-
-div:hover {
-    width: 300px;
-    height: 300px;
-		
-	}
+	
 
   </style>
 
@@ -227,24 +225,24 @@ div:hover {
 <section id="stuff">
 
 <h2>Portfolio</h2>
-  <h3 href="#" class="transition">Digital Illustration</h3>
+  <h3 href="#">Digital Illustration</h3>
 
 <a> <img id="gifts" src="http://nandoe0351.me/GWDA273/action%20final%20project.jpg" style="width: 500px; height: 700px;"> </a>
   <br>
   
-  <h3 href="#" class="transition">Image Manipulation</h3>
+  <h3 href="#">Image Manipulation</h3>
 
   <a> <img src="http://nandoe0351.me/GWDA273/Final%20Project.jpg" style="width: 700px; height: 500px;"> </a>
  
 	<br>
   
-  <h3 href="#" class="transition">T-Shirt art and Logos</h3>
+  <h3 href="#">T-Shirt art and Logos</h3>
 
   <a> <img src="http://nandoe0351.me/GWDA273/Prtojerct%2010%20Master%20Artist%20T-Shirt.jpg" style="width: 700px; height: 500px;"> </a>
 
 	 <br>
   
-  <h3 href="#" class="transition">CD cover and art work</h3>
+  <h3 href="#">CD cover and art work</h3>
 
   <a> <img src="http://nandoe0351.me/GWDA273/cd%20project%20Design%20class.jpg" style="width: 700px; height: 500px;"> </a>
 
