--- a/resume.html
+++ b/resume.html
@@ -34,12 +34,12 @@
     font-size: 60px;
   }
 	  
-  h3 {
+  .trans {
 	   -webkit-transition: width 2s, height 4s;
     transition: width 2s, height 4s;
 }
 
-h3:hover {
+trans:hover {
     width: 300px;
     height: 300px;
 }
@@ -190,11 +190,11 @@ header {
 
 <article> 
 
-<h3>Designing and building new websites</h3> <p>Mobile devices and different platfoms</p></article>
+<h3 class="trans">Designing and building new websites</h3> <p>Mobile devices and different platfoms</p></article>
 
 <article> 
 
-<h3>Complete digital design</h3> <p>modify or create new material</p> </article>
+<h3 class="trans" >Complete digital design</h3> <p>modify or create new material</p> </article>
 
 <article> 
 
