--- a/resume.html
+++ b/resume.html
@@ -186,15 +186,15 @@ header {
 
   <div class="decoration">
 
-<h2>Services</h2>
+<h2 class="trans">Services</h2>
 
 <article> 
 
-<h3 class="trans">Designing and building new websites</h3> <p>Mobile devices and different platfoms</p></article>
+<h3>Designing and building new websites</h3> <p>Mobile devices and different platfoms</p></article>
 
 <article> 
 
-<h3 class="trans" >Complete digital design</h3> <p>modify or create new material</p> </article>
+<h3>Complete digital design</h3> <p>modify or create new material</p> </article>
 
 <article> 
 
@@ -207,11 +207,11 @@ header {
 
 
 
-<section id="journey"> 
 
 
 
-<h2> Experiece</h2>
+
+<h2 class="trans"> Experiece</h2>
 
 <p style="float: left; text-align: justify; font-size: 25px; color: #9ACD32; margin-right: 20px;">  I want to offer my services and expertise to the world.  I have a passion for creating and promoting ideas and making greatness even greater.  I can help you promote from the ground up your business by building you a website that can help you achieve your goals.  
 	From digital illustration to image manipulation, I am sure I can help you achieve the success you need to achieve your goals.</p>
@@ -224,7 +224,7 @@ header {
 
 <section id="stuff">
 
-<h2>Portfolio</h2>
+<h2 class="trans">Portfolio</h2>
   <h3 href="#">Digital Illustration</h3>
 
 <a> <img id="gifts" src="http://nandoe0351.me/GWDA273/action%20final%20project.jpg" style="width: 500px; height: 700px;"> </a>
