--- a/resume.html
+++ b/resume.html
@@ -176,9 +176,9 @@ header {
 	  <h1 id="me" style="font-size= 50px margin-top= 400px color=#7FFF00">Fernando Escobar</h1>
 	  <br>
 
-    <div id="boom">
-	  <img src="http://nandoe0351.me/GWDA273/IMG_1974%20copy.jpg" style="width: 190px; height: 250px">
-	  </div>
+    
+	  <img id="boom" src="http://nandoe0351.me/GWDA273/IMG_1974%20copy.jpg" style="width: 190px; height: 250px">
+	  
     <br>
     
 	  
