--- a/resume.html
+++ b/resume.html
@@ -22,12 +22,6 @@
   background-size: 120%; 
   }
   
-	  #boom: hover {
-		height:   500px;
-		  width: 380px;
-		  transition: all 2s ease-in-out;
-	  }
-	  
 	  
 	  h1 {
    
@@ -177,7 +171,7 @@ header {
 	  <br>
 
     
-	  <img id="boom" src="http://nandoe0351.me/GWDA273/IMG_1974%20copy.jpg" style="width: 190px; height: 250px">
+	  <img src="http://nandoe0351.me/GWDA273/IMG_1974%20copy.jpg" style="width: 190px; height: 250px" hover="height: 500px; width: 380px; transition: all 2s ease-in-out">
 	  
     <br>
     
