--- a/resume.html
+++ b/resume.html
@@ -251,4 +251,15 @@ header {
 </section>
 
 </body>
+	
+<footer>
+	  
+	  
+		<h2>Social Media</h2>
+  <a href="https://www.linkedin.com/in/fernando-escobar-9a15b0126?trk=nav_responsive_tab_profile_pic"> LinkedIn</a> 
+	
+	
+ 
+	  </footer>
+
 </html>
