--- a/resume.html
+++ b/resume.html
@@ -189,15 +189,15 @@ header {
 
 <article> 
 
-<h3>Designing and building new websites</h3> <p>Mobile devices and different platfoms</p></article>
+<h3 style="color: #7FFF00">Designing and building new websites</h3> <p style="color: #F0F8FF">Mobile devices and different platfoms</p></article>
 
 <article> 
 
-<h3>Complete digital design</h3> <p>modify or create new material</p> </article>
+<h3 style="color: #7FFF00">Complete digital design</h3> <p style="color: #F0F8FF">modify or create new material</p> </article>
 
 <article> 
 
-<h3>Social media expertise</h3> <p>Have the world know you!</p> </article>
+<h3 style="color: #7FFF00">Social media expertise</h3> <p style="color: #F0F8FF">Have the world know you!</p> </article>
 
 </div>
 
