--- a/resume.html
+++ b/resume.html
@@ -151,6 +151,41 @@ header {
 		filter: saturate(0);
 	}
 	
+	.pic {
+  float: right;
+  margin-right: 170px;
+  margin-top: -150px;
+}
+
+.pic1 {
+   float: left;
+  margin-left: 500px;
+  margin-top: -200px;
+}
+
+.pic2 {
+  margin-top: -100px;
+  margin-left: 200px;
+  position: absolute;
+}
+
+.pic3 {
+  float: right;
+  margin-top: -300px;
+  margin-right: -180px;
+}
+
+.pic4 {
+  margin-top: 80px;
+  margin-right: 180px;
+}
+
+h3 {
+  color: white; 
+  text-align: left;
+}
+
+	
 	
 
   </style>
