--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,13 @@
 	  <script src="https://use.typekit.net/uuz2sow.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 	  
+	  <link rel="stylesheet" href="css/animate.css">
+	  
+	  <script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
+	  
   </head>
   <style>
      body{
@@ -178,7 +185,7 @@ h3 {
 	  <br>
 
     
-	  <img src="http://nandoe0351.me/GWDA273/IMG_1974%20copy.jpg" style="width: 190px; height: 250px" hover="height: 500px; width: 380px; transition: all 2s ease-in-out">
+	  <div class="wow"><img src="http://nandoe0351.me/GWDA273/IMG_1974%20copy.jpg" style="width: 190px; height: 250px" hover="height: 500px; width: 380px; transition: all 2s ease-in-out"></div>
 	  
     <br>
     
