--- a/resume.html
+++ b/resume.html
@@ -240,24 +240,25 @@ h3 {
 <h2>Portfolio</h2>
   <h3 href="#">Digital Illustration</h3>
 
-<a> <img id="gifts" src="http://nandoe0351.me/GWDA273/action%20final%20project.jpg" style="width: 500px; height: 700px;"> </a>
+<div class="wow">
+	<a> <img id="gifts" src="http://nandoe0351.me/GWDA273/action%20final%20project.jpg" style="width: 500px; height: 700px;"> </a></div>
   <br>
   
   <h3 href="#">Image Manipulation</h3>
-
-  <a> <img src="http://nandoe0351.me/GWDA273/Final%20Project.jpg" style="width: 700px; height: 500px;"> </a>
+<div class="wow">
+  <a> <img src="http://nandoe0351.me/GWDA273/Final%20Project.jpg" style="width: 700px; height: 500px;"> </a></div>
  
 	<br>
   
   <h3 href="#">T-Shirt art and Logos</h3>
-
-  <a> <img src="http://nandoe0351.me/GWDA273/Prtojerct%2010%20Master%20Artist%20T-Shirt.jpg" style="width: 700px; height: 500px;"> </a>
+<div class="wow">
+  <a> <img src="http://nandoe0351.me/GWDA273/Prtojerct%2010%20Master%20Artist%20T-Shirt.jpg" style="width: 700px; height: 500px;"> </a></div>
 
 	 <br>
   
   <h3 href="#">CD cover and art work</h3>
-
-  <a> <img src="http://nandoe0351.me/GWDA273/cd%20project%20Design%20class.jpg" style="width: 700px; height: 500px;"> </a>
+<div class="wow">
+  <a> <img src="http://nandoe0351.me/GWDA273/cd%20project%20Design%20class.jpg" style="width: 700px; height: 500px;"> </a></div>
 
 
 
