--- a/resume.html
+++ b/resume.html
@@ -13,12 +13,9 @@
 	  <script src="https://use.typekit.net/uuz2sow.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 	  
-	  <link rel="stylesheet" href="css/animate.css">
-	  
-	  <script src="js/wow.min.js"></script>
-              <script>
-              new WOW().init();
-              </script>
+	 
+  <link rel="stylesheet" href="animate.min.css">
+
 	  
   </head>
   <style>
