--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,8 @@
 	  <script src="https://use.typekit.net/uuz2sow.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 	  
-	 
-  <link rel="stylesheet" href="animate.min.css">
+	<link rel="stylesheet" href="css/animate.css"> 
+ 
 
 	  
   </head>
@@ -167,6 +167,11 @@ h3 {
   </style>
 
 <body>
+	
+	<script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
 
 <nav>
 
