--- a/resume.html
+++ b/resume.html
@@ -242,8 +242,9 @@ h3 {
 <h2>Portfolio</h2>
   <h3 href="#">Digital Illustration</h3>
 
-<div class="wow">
-	<a> <img id="gifts" src="http://nandoe0351.me/GWDA273/action%20final%20project.jpg" style="width: 500px; height: 700px;"> </a></div>
+<div class="wow tada">
+	<a> <img id="gifts" src="http://nandoe0351.me/GWDA273/action%20final%20project.jpg" style="width: 500px; height: 700px;">
+</a></div>
   <br>
   
   <h3 href="#">Image Manipulation</h3>
