--- a/resume.html
+++ b/resume.html
@@ -242,7 +242,7 @@ h3 {
 <h2>Portfolio</h2>
   <h3 href="#">Digital Illustration</h3>
 
-<div class="wow tada">
+<div class="wow tada" data-wow-delay="0.5">
 	<a> <img id="gifts" src="http://nandoe0351.me/GWDA273/action%20final%20project.jpg" style="width: 500px; height: 700px;">
 </a></div>
   <br>
