--- a/resume.html
+++ b/resume.html
@@ -167,6 +167,7 @@ h3 {
   </style>
 
 <body>
+	<script> src="https://cdnjs.cloudflare.com/ajax/libs/animateCSS/1.2.1/jquery.animatecss.min.js"</script>
 	
 	<script src="js/wow.min.js"></script>
               <script>
