--- a/resume.html
+++ b/resume.html
@@ -244,7 +244,7 @@ h3 {
   <h3 href="#">Digital Illustration</h3>
 
 <div class="wow tada" data-wow-delay="0.5">
-	<a> <img id="gifts" src="http://nandoe0351.me/GWDA273/action%20final%20project.jpg" style="width: 500px; height: 700px;">
+	<a> <img src="http://nandoe0351.me/GWDA273/action%20final%20project.jpg" style="width: 500px; height: 700px;">
 </a></div>
   <br>
   
