--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
 	  <script src="https://use.typekit.net/uuz2sow.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 	  
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.csss"> 
+	<link rel="stylesheet" type="text/css" href="">
  
 
 	  
